# riskformgen

./: .gitignore  CLAUDE.md  README.md  config.py  input.css  main.py  models.py  parse.py  pyproject.toml  render.py
form/: controls.yaml  risks.yaml  sections.yaml
plans/: clever-dazzling-sparrow.md  fuzzy-squishing-steele.md  hashed-tinkering-rose.md  hidden-riding-grove.md  polished-waddling-pudding.md  sunny-giggling-brook.md  tingly-petting-phoenix.md  unified-moseying-meteor.md  wobbly-crunching-whisper.md  zany-drifting-sundae.md  zesty-hugging-lecun.md
templates/: page.html.j2  question.html.j2  risk_summary.html.j2  save_load.html.j2  subsection.html.j2
templates/questions/: free_text.html.j2  multiple_choice.html.j2  multiple_select.html.j2  yes_no.html.j2
tests/: conftest.py  test_config.py  test_form_files.py  test_models.py  test_parse.py  test_render.py
