[project]
name = "formgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
